# MCP_test

./: README.md  addon.py  claude_api.py  pr_analyzer.py  pyproject.toml  requirements.txt  run_automation.py  web_app.py
pr_reviewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: index.html
