[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pr-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "notion-client>=2.3.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "Flask>=2.0.0",
    "pyautogui>=0.9.53"
]
